# magic_deck_set_tool

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  schemas.py  scrap.py  setchecker.py
